fix overflow

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -103,7 +103,7 @@ a:hover .readmore {
 }
 
 .notdesign-box {
-  overflow: visible;
+  overflow: hidden;
 }
 
 .notdesign {
